user.css
/* ... */
.Root__nav-bar [fade="full"],
.Root__right-sidebar[fade="full"] {
    -webkit-mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 1) 80%, transparent 100%);
}

/*
-------------------
RIGHT SIDEBAR
-------------------
*/

/* set transparent background */
.main-nowPlayingView-section {
    background: none;
}
.Root__right-sidebar aside {
    background: none;
}

/* add top padding */
.spotify__os--is-windows .main-buddyFeed-content {
    padding-top: 24px;
}

/* set transparent background for section containers */
.Root__right-sidebar {
/*    background: linear-gradient(rgba(var(--spice-rgb-sidebar), 0.3) 50%, transparent) !important;*/
}

/* fix header padding */
.main-buddyFeed-header {
    padding-left: 0 !important;
}

/* now playing view link hovers */
.uvIvZ4XqfEFs88BAPaI8:focus-within,
.uvIvZ4XqfEFs88BAPaI8:hover,
.artist-artistOffers-item:focus-within,
.artist-artistOffers-item:hover,
.main-nowPlayingView-queueItem:focus-within,
.main-nowPlayingView-queueItem:hover {
    background: linear-gradient(
        90deg,
        transparent 0%,
        rgba(var(--spice-rgb-selected-row), 0.07) 30%,
        rgba(var(--spice-rgb-selected-row), 0.07) 60%,
        transparent 100%
    );
}


.main-yourLibraryX-navItem {
    padding: 0px 12px;
}

.main-topBar-buddyFeed {
    display: none;
}

.main-yourLibraryX-listItem[aria-setsize="52"] {
    padding: 0px 8px;
}

.main-yourLibraryX-navItems {
    padding-bottom: 0px;
}

.main-yourLibraryX-header {
    padding-top: 0px;
}

.main-nowPlayingWidget-nowPlaying {
  transition: margin 150ms linear;
}

.main-nowPlayingWidget-coverExpanded {
  margin-left: -64px !important;
  -webkit-transform: unset !important;
  transform: unset !important;
}

.Root__now-playing-bar {
  margin: 0px 12px 12px 12px;
  background: black;
  border-radius: 12px;
  width: auto;
}

.main-nowPlayingBar-nowPlayingBar {
    overflow: hidden;
    gap: 50px;
}

.main-coverSlotExpanded-container:not(.main-nowPlayingWidget-trackInfo) {
  box-shadow: none;
  width: calc(100% - 12px);
  margin: 12px 0px 0px 12px;
  border-radius: 12px;
}

.main-userWidget-boxCondensed, .main-noConnection-isNotice {
  background: none;
  border-radius: 8px;
  background-color: rgba(var(--spice-rgb-shadow), 0.7) !important;
  color: rgba(var(--spice-rgb-text), 0.7);
}

.gWUxbU2cIHAajHxsVLMZ {
  width: auto;
}

.main-buddyFeed-container {
  margin-right: 12px;
  width: calc(100% - 12px) !important;
  margin-top: 16px;
  height: calc(100% - 16px);
}

.main-nowPlayingView-contextItemInfo {
    display: none;
}

